# NexusFeed

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  temp.py
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_init_tables.py
exchanges/: __init__.py  base_exchange.py  binance.py  binance_coinm.py  binance_spot.py  binance_usdm.py  bitfinex.py  bitget.py  bitmex.py  bitso.py  bitstamp.py  blofin.py  bybit.py  coinbase.py  cryptocom.py  deribit.py  gateio.py  gemini.py  kraken_futures.py  kraken_spot.py  kucoin_futures.py  kucoin_spot.py  loader.py  okx.py
frontend/: index.html
frontend/css/: styles.css
frontend/js/: app.js
helpers/: __init__.py  gomarket_api.py  logger.py  saver.py
scripts/: init_db.py  test_repo.py  validate_repo.py
src/nexusfeed/connectors/: binance.py
src/nexusfeed/normalizer/: __init__.py  normalizer.py  schema.md
src/nexusfeed/publisher/: websocket_pub.py
src/nexusfeed/services/: feed_manager.py  replay_service.py  simulated_connector.py
src/nexusfeed/storage/: db.py  models.py  redis_cache.py  repo.py
src/nexusfeed/utils/: metrics.py
tests/: conftest.py
tests/integration/: test_feed_pipeline.py
tests/unit/: test_binance_connector.py  test_normalizer.py  test_redis_cache.py  test_repo_batch.py
